--- a/Changelog
+++ b/Changelog
@@ -38,6 +38,7 @@
 - Improved documentation. (QTIFW-526)
 - Updated and improved translations.
 - Removed SetQtCreatorArrayValue, AddQtCreatorArrayValue operations.
+- Removed ApplyProductKey, ReplaceInstallNames, QtPatch operations.
 
 Thanks go to Christoph Vogtländer, Sze Howe Koh, Ray Donnelly, Tasuku Suzuki and Sascha Cunz for contributions.
 
