Allow spaces in path by default
Change-Id: Iff1e5056a2465977fd6930f94a649ce51dd0fcd0
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>

--- a/Changelog
+++ b/Changelog
@@ -40,6 +40,7 @@
 - Removed SetQtCreatorArrayValue, AddQtCreatorArrayValue operations.
 - Removed ApplyProductKey, ReplaceInstallNames, QtPatch operations.
 - Added systemInfo to the scripting API (QTIFW-592).
+- Changed default of 'AllowSpaceInPath' from false to true.
 
 Thanks go to Christoph Vogtländer, Sze Howe Koh, Ray Donnelly, Tasuku Suzuki and Sascha Cunz for contributions.
 
