Fix dependencies in static build
Change-Id: Iae06c6d5a9b1c678a4ab136da145a9c69ccadb6e
Reviewed-by: Jarek Kobus <jaroslaw.kobus@theqtcompany.com>

--- a/INSTALL
+++ b/INSTALL
@@ -61,7 +61,7 @@ configure -prefix %CD%\qtbase -release -static -target xp -accessibility -no-ope
 
 Recommended configuration options for Linux:
 
-configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -qt-xcb -no-cups -no-sql-sqlite -no-qml-debug -no-opengl -nomake examples -nomake tests -skip qtactiveqt -skip qtenginio -skip qtlocation -skip qtmultimedia -skip qtserialport -skip qtquick1 -skip qtquickcontrols -skip qtscript -skip qtsensors -skip qtwebkit -skip qtwebsockets -skip qtxmlpatterns
+configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -qt-xcb -qt-pcre -qt-freetype -no-glib -no-cups -no-sql-sqlite -no-qml-debug -no-opengl -no-egl -no-xinput -no-xinput2 -no-sm -nomake examples -nomake tests -skip qtactiveqt -skip qtenginio -skip qtlocation -skip qtmultimedia -skip qtserialport -skip qtquick1 -skip qtquickcontrols -skip qtscript -skip qtsensors -skip qtwebkit -skip qtwebsockets -skip qtxmlpatterns
 
 ### OS X
 
