--- a/examples/online/README
+++ b/examples/online/README
@@ -10,7 +10,7 @@ Generate installer with
 
   binarycreator --online-only -c config/config.xml -p packages installer
 
-Now launch a minimal web server in the local directory
+Now launch a minimal web server in the example's directory (admin rights may be needed)
 
   python -m SimpleHTTPServer 80
 
