--- a/examples/translations/config/config.xml
+++ b/examples/translations/config/config.xml
@@ -5,5 +5,5 @@
     <Title>Package Translations Example</Title>
     <Publisher>Qt Project</Publisher>
     <StartMenuDir>Qt Installer Framework Examples</StartMenuDir>
-    <TargetDir>@HomeDir@/IfwExample</TargetDir>
+    <TargetDir>@HomeDir@/IfwExamples/translations</TargetDir>
 </Installer>
