--- a/INSTALL
+++ b/INSTALL
@@ -24,34 +24,24 @@ See the Qt documentation for the prerequisites and steps to build Qt from source
 ### Windows
 
 Adjust the qmake.conf to have a real stand alone working installer:
-
-- remove 'embed_manifest_dll embed_manifest_exe' from CONFIG line
-- replace -MD, -MDd with -MT, -MTD in the CFLAGS lines
+Replace -MD, -MDd with -MT, -MTD in the CFLAGS lines
 
 'git diff' should show you something like:
 
 --- a/mkspecs/win32-msvc20XX/qmake.conf
 +++ b/mkspecs/win32-msvc20XX/qmake.conf
-
- MAKEFILE_GENERATOR      = MSVC.NET
- TEMPLATE                = app
--CONFIG                  += qt warn_on release incremental flat link_prl precompile_header autogen_precompile_source copy_dir_files debug_and_release debug_and_release_target embed_manifest_dll embed_manifest_exe
-+CONFIG                  += qt warn_on release incremental flat link_prl precompile_header autogen_precompile_source copy_dir_files debug_and_release debug_and_release_target
- QT                      += core gui
- DEFINES                 += UNICODE WIN32 QT_LARGEFILE_SUPPORT
- QMAKE_COMPILER_DEFINES  += _MSC_VER=1400 WIN32
- QMAKE_YACCFLAGS         = -d
- QMAKE_CFLAGS            = -nologo -Zm200 -Zc:wchar_t-
+ QMAKE_CFLAGS            = -nologo -Zm200 -Zc:wchar_t -FS
  QMAKE_CFLAGS_WARN_ON    = -W3
  QMAKE_CFLAGS_WARN_OFF   = -W0
--QMAKE_CFLAGS_RELEASE    = -O2 -MD
--QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += -O2 -MD -Zi
+-QMAKE_CFLAGS_RELEASE    = -O2 -MD -Zc:strictStrings
+-QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += -O2 -MD -Zi -Zc:strictStrings
 -QMAKE_CFLAGS_DEBUG      = -Zi -MDd
-+QMAKE_CFLAGS_RELEASE    = -O2 -MT
-+QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += -O2 -MT -Zi
++QMAKE_CFLAGS_RELEASE    = -O2 -MT -Zc:strictStrings
++QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += -O2 -MT -Zi -Zc:strictStrings
 +QMAKE_CFLAGS_DEBUG      = -Zi -MTd
  QMAKE_CFLAGS_YACC       =
  QMAKE_CFLAGS_LTCG       = -GL
+ QMAKE_CFLAGS_MP         = -MP
 
 Recommended configuration options for Microsoft Windows:
 
