Fix crash on exit for Windows XP, Vista
The destructor of QWinTaskBarButton until Qt 5.4.2 crashes on exit
if the OS is older than Windows 7.

Task-number: QTIFW-652
Change-Id: Icd0255f79f7339937f129cddce7291997d652f72
Reviewed-by: Karsten Heimrich <karsten.heimrich@theqtcompany.com>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+2.0.1
+- Fix crash on exit for Windows XP, Vista (QTIFW-652)
+
 2.0.0
 - Require Qt 5.4 as a minimal version, Qt 4 code removed.
 - Only support Qt 5 on documentation side as well.
