--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 2.0.1
-- Fix crash on exit for Windows XP, Vista (QTIFW-652)
+- Do not throw exception on empty translation files.
+- Fix --checkupdates mode.
+- Prevent disabled component to be selected using the Select All button. (QTIFW-635)
+- Windows: Fix crashes in elevated installation. (QTIFW-6656, QTIFW-659)
+- Fix crash on exit for Windows XP, Vista. (QTIFW-652)
+- Documentation updates.
 
 2.0.0
 - Require Qt 5.4 as a minimal version, Qt 4 code removed.
