--- a/INSTALL
+++ b/INSTALL
@@ -26,13 +26,13 @@ See the Qt documentation for the prerequisites and steps to build Qt from source
 
 ### Windows
 
-Adjust the qmake.conf to have a real stand alone working installer:
-Replace -MD, -MDd with -MT, -MTD in the CFLAGS lines
+For Qt 5.4, you need to adjust the respective qmake.conf to have a real stand alone
+working installer. Replace -MD, -MDd with -MT, -MTD in the CFLAGS lines.
 
 'git diff' should show you something like:
 
---- a/mkspecs/win32-msvc20XX/qmake.conf
-+++ b/mkspecs/win32-msvc20XX/qmake.conf
+--- a/mkspecs/win32-msvc2013/qmake.conf
++++ b/mkspecs/win32-msvc2013/qmake.conf
  QMAKE_CFLAGS            = -nologo -Zm200 -Zc:wchar_t -FS
  QMAKE_CFLAGS_WARN_ON    = -W3
  QMAKE_CFLAGS_WARN_OFF   = -W0
@@ -45,6 +45,9 @@ Replace -MD, -MDd with -MT, -MTD in the CFLAGS lines
  QMAKE_CFLAGS_YACC       =
  QMAKE_CFLAGS_LTCG       = -GL
  QMAKE_CFLAGS_MP         = -MP
+
+From Qt 5.5 onwards, you can achieve the same by passing -static-runtime to
+configure.
 
 Recommended configuration options for Microsoft Windows:
 
