--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@
 - Windows: Fix crashes in elevated installation. (QTIFW-6656, QTIFW-659)
 - Fix crash on exit for Windows XP, Vista. (QTIFW-652)
 - Documentation updates.
+- Re-add handling of zero compression level files supported by 7z.
 
 2.0.0
 - Require Qt 5.4 as a minimal version, Qt 4 code removed.
