Update version number for 2.0.3 release
Also update the Changelog.

Change-Id: I2a74edd32783bdfb01d4706dcbc2d3ae78ac5069
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+2.0.3
+- Revert "Use QQmlV4Function to correctly get empty parameters from script."
+- Fix crash when updating admin installation with user/temp repository (QTIFW-740)
+- Compile with Qt 5.5, 5.6. Minimum version is now 5.5.
+- Fix compile with namespace'ed Qt.
+
 2.0.2
 - Doc: Remove dubious sentence from installer.calculateComponentsToUninstall().
 - Update documentation for --runoperation.
