--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
 2.0.3
+- Update Japanese translation.
+- Make IFW compile with FreeBSD. (QTIFW-841)
+- Fix MSVC2015 build.
 - Revert "Use QQmlV4Function to correctly get empty parameters from script."
 - Fix crash when updating admin installation with user/temp repository (QTIFW-740)
 - Compile with Qt 5.5, 5.6. Minimum version is now 5.5.
