Change 'Checkable' element behavior
Althogh 'Checkable' value is set to package, that can contain packages to
install. Enabling the install of components using 'Checkable' value.

Change-Id: I05d65fe2da65644872d46bdef3accd5e3f16ad31
Reviewed-by: Iikka Eklund <iikka.eklund@qt.io>

--- a/examples/hidecheckbox/README
+++ b/examples/hidecheckbox/README
@@ -1,4 +1,4 @@
-Shows how to disable top level item, allowing the installation of child items.
+Shows how to hide top level item's checkbox.
 
 Generate installer with
 
