--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,5 @@
 3.0.0
+- Change required Qt version, minimum version is now 5.6.2.
 - Clarify the add/remove components string to make it clearer
 - Fix crash at the very end of install if admin rights needed in Windows (QTIFW-943)
 - Make installer to check the dependency version (QTIFW-914)
