make .ts file naming follow the usual pattern
this makes it easier to integrate ifw into the surrounding
infrastructure.

Change-Id: I7918830b7a6c29d8556911eec83a3b6530478d84
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/src/sdk/translations/README
+++ b/src/sdk/translations/README
@@ -4,7 +4,7 @@ otherwise your language won't be loaded at runtime.
 To add a new language:
 1) Run 'cd src/sdk' (change to the parent directory of this file)
 2) Run 'make ts-untranslated'
-3) Rename translations/untranslated.ts to translations/<lang>.ts
+3) Rename translations/ifw_untranslated.ts to translations/ifw_<lang>.ts
 4) Run 'make qmake'
 5) Do your translation. Just run 'make' whenever you want to test it.
 6) Run 'make commit-ts'
