--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+3.0.4
+- Fix infinite wait if downloadable package is missing (QTIFW-1064)
+- Fix the maintenancetool that failing to elevate to admin (QTIFW-1010)
+- Fix devtool's segmentation fault when using operation
+- Update Japanese translation
+- Remove unnecessary warning (QTIFW-1022)
+- Fix Mkdir operation in uninstall (QTIFW-1099)
+- Enable building IFW with Squish support
+
 3.0.3
 - Set correct proxy type (QTBUG-65143)
 - Add no-proxy option (QTIFW-1085)
