--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@
 - Fix install button string having a font name in French translation (QTIFW-1333)
 - Fix maintenancetool size (QTIFW-1322)
 - Update Russian translation
+- Enable links and text selection in component description fields (QTIFW-1292)
 
 3.1.0
 - Fix wizard's maximum size not to exceed screen maximum size (QTIFW-1227)
