macOS: Fix widget overlapping in componentselection page in macOS 10.12
In componentselection page, calling setVisible(false) does not work in
macOS 10.12 causing the treeview to be partly visible under the progressbar.
Added repaint() call to cause immediate redraw to widget to fix the
issue.

Task-number: QTIFW-1437
Change-Id: I854d439908b8d8cd0f81076fced07a4d2d4bb6f2
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>

--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,7 @@
 - Fix recalculation of components to install in MaintenanceTool (QTIFW-694)
 - Enable support for Qt 5.12. In Windows supported compilers are msvc2015 and msvc2017 (QTIFW-1312)
 - Set default file permissions to installer created files on Unix (QTIFW-1412)
+- MacOS: Fix widget overlapping in componentselection page in MacOS 10.12 (QTIFW-1437)
 
 3.1.1
 - Add fetch to the same pane with package categories (QTIFW-1284)
