Doc: Update supported Qt version
Related change 9501f454d3dae429edd20f746a3e4b3aac76f6c9.

Change-Id: Ie07e8fb790045712b99ac19abab68949e35a17ae
Reviewed-by: Katja Marttila <katja.marttila@qt.io>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Iikka Eklund <iikka.eklund@qt.io>

--- a/README
+++ b/README
@@ -13,8 +13,8 @@ doc directory. The documentation is also available online at
 Notes
 --------------------------
 
-To build an installer, it is advised to use a statically linked Qt (5.4 or
-newer).
+To build an installer, it is advised to use a statically linked Qt (5.12.7 or
+newer). The tested and supported Qt version is 5.12.7.
 
 See the documentation at
     https://doc.qt.io/qtinstallerframework/ifw-getting-started.html
