--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,44 @@
+4.1.0
+- Emit signal when components are recalculated (QTIFW-2172)
+- Add Arabic translation (QTIFW-1425)
+- Update side widget with the binary marker changes in introduction page (QTIFW-2150)
+- Fix App Error when trying to launch a running installer (QTIFW-2149)
+- Fix value overwrite from command line (QTIFW-2021)
+- Fix DesktopDir value for AllUsers
+- CLI: Add warning when cli-only options are used without command keyword (QTIFW-2046)
+- Translations: Update existing TS files (QTIFW-2126)
+- Add possibility to move component in component tree (QTIFW-594)
+- Try rerunning execute operation (QTIFW-2125)
+- CLI: Exit when expecting user input and the output device is not a TTY (QTIFW-1949)
+- Add support for setting minimum wizard dimensions in config.xml (QTIFW-1903)
+- Save Execute operation with predefined variable (QTIFW-2124)
+- Make LicenseAgreementPage license list & details browser user-resizable (QTIFW-1987)
+- Fix wizard page addition before ComponentSelectionPage (QTIFW-1168)
+- Remove double calculation of uninstall components (QTIFW-1021)
+- Replace usage of derived LazyPlainTextEdit class with QTextEdit (QTIFW-1994)
+- Fix InstallIcons and CreateDesktopEntry operations usage as root (QTIFW-2093)
+- Add support for generating offline installer from online (QTIFW-1945)
+- Provide tooltip texts for buttons (QTIFW-2073)
+- Allow disabling undo in CreateLocalRepository operation during uninstall (QTIFW-2094)
+- Remove 'Reject Licenses' radio button and change 'Accept Licenses' to checkbox (QTIFW-2057)
+- Add highdpi support for watermark, banner, background and pagelistpixmaps (QTIFW-2084)
+- Fix translating from component script (QTIFW-392)
+- Allow disabling undo in RegisterFileType operation during uninstall (QTIFW-2089)
+- Allow disabling undo in SimpleMoveFile operation during uninstall (2090)
+- Allow disabling undo in CopyDirectory during uninstall (QTIFW-2088)
+- Allow disabling undo of GlobalSettings during uninstall (QTIFW-1973)
+- Introduce ForcedUpdate element for component (QTIFW-1565)
+- Add high dpi image support for Logo and ProductImages (QTIFW-2061, QTIFW-2060)
+- Copy highdpi images as resource to installer (QTIFW-2080)
+- Tools: fix binarycreator usage with unified meta-only repositories (QTIFW-2051)
+- Add option to define operations in component.xml (QTIFW-507)
+- Print package information in xml format (QTIFW-1950)
+- Arrange licenses and filter duplicates
+- CLI: Print extra archive information with higher verbosity level (QTIFW-1998)
+- Allow to set ForcedInstallation from component script (QTIFW-675)
+- Automatically uninstall unneeded virtual components (QTBUG-76210)
+- CLI: Add possibility to filter installed packages with regexp (QTIFW-1953)
+
 4.0.1
 - Enable HighDPI support in X11
 - Fix AppendFile undo (QTIFW-2020)
