Libarchive: use libiconv installed with macOS
Update build instructions for Coin.

Also update docs to remove mention of the extra step of installing
additional version of the library, as this is not necessary.

Change-Id: I71fb346af30325b1bfeed788e9fec832f344b382
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/INSTALL
+++ b/INSTALL
@@ -95,11 +95,11 @@ $ sudo apt install zlib1g-dev liblzma-dev libbz2-dev
 
 The easiest way to install the missing libraries is with a third party
 package manager solution, like Homebrew or MacPorts. On macOS 10.15 you
-should only need to install the libiconv and liblzma libraries.
+should only need to additionally install the liblzma library.
 
 On Homebrew this would be:
 
-$ brew install libiconv xz
+$ brew install xz
 
 ### Troubleshooting
 
