--- a/INSTALL
+++ b/INSTALL
@@ -15,9 +15,9 @@ http://code.qt.io/cgit/installer-framework/installer-framework.git/
 Build a static Qt
 ---------------------
 
-Building the Qt Installer Framework from sources requires at least Qt version 5.12.7.
-Supported compilers are MSVC 2013 or newer, GCC 4.7 or newer,
-and Clang 3.1 or newer. Currently, the tested combination for Windows is Qt 5.12.7 with MSVC 2015.
+Building the Qt Installer Framework from sources requires at least Qt version 5.15.2.
+Supported compilers are MSVC 2015 or newer, GCC 5 or newer,
+and Clang 11.0.0 or newer. Currently, the tested combination for Windows is Qt 5.15.2 with MSVC 2015 (Windows 10).
 
 If you want to ship your installer as a single file you have to build
 Qt and the Qt Installer Framework statically.
